# Kovy

./: .gitignore  Kovy.ipynb  README.md  Readme.md  players.csv  pyproject.toml  train_dqn.py  train_pg.py  z-score.py
.spyproject/config/: workspace.ini
lib/: dqn_utils.py  env.py  pg_utils.py
models/DQN_2023-09-06_10-05-05/: model_104.pth  model_112.pth  model_120.pth  model_128.pth  model_136.pth  model_144.pth  model_152.pth  model_16.pth  model_160.pth  model_168.pth  model_176.pth  model_184.pth  model_192.pth  model_200.pth  model_208.pth  model_216.pth  model_224.pth  model_232.pth  model_24.pth  model_240.pth  model_248.pth  model_256.pth  model_264.pth  model_272.pth  model_280.pth  model_288.pth  model_296.pth  model_304.pth  model_312.pth  model_32.pth  model_320.pth  model_328.pth  model_336.pth  model_344.pth  model_352.pth  model_40.pth  model_48.pth  model_56.pth  model_64.pth  model_72.pth  (+4 more)
models/DQN_2023-09-06_14-10-21/: model_16.pth  model_24.pth  model_32.pth  model_40.pth  model_48.pth  model_8.pth
runs/DQN_2023-09-06_10-05-05/: events.out.tfevents.1694019909.DESKTOP-CH80IAB.8952.0
runs/DQN_2023-09-06_14-10-21/: events.out.tfevents.1693998621.DESKTOP-N2T5D9D.13700.0
