[tool.poetry]
name = "equus"
version = "0.1.0"
description = ""
authors = ["Kyle Huberman <kylehuberman@gmail.com>"]
readme = "README.md"
repository = "https://github.com/icehube/round-3"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
torch = "^2.0.1"
tensorboard = "^2.14.0"
torchvision = "^0.15.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
